@@ -1,5 +1,12 @@
 2010-08-06  Dan Nicolaescu  <dann@ics.uci.edu>
 
+	* keyboard.h (quit_char): Add declaration.
+	* process.h (QCport, QCspeed, QCprocess, QCbytesize, QCstopbits)
+	(QCparity, Qodd, Qeven, QCflowcontrol, Qhw, Qsw, QCsummary): Add
+	declarations.
+	* sysdep.c:
+	* w32.c: Remove the above declarations.
+
 	Remove extern declarations in .c files, .h files have them.
 	* xterm.c:
 	* xdisp.c:
